fix: Empty default maker/checker pools on SOP creation and grant VIEWER access to SOP Management tab
- frontend: Added ROLES.VIEWER to PERMISSIONS['/sops'] and PERMISSIONS['/inbox'] in rbac.js so assigned Creators/Approvers with VIEWER role can access the SOP Management tab in sidebar
- frontend: Reset INITIAL_FORM in CreateSOPModal to start defaultMakerIds and defaultCheckerIds empty so no hardcoded user defaults are prefilled
- frontend: Added mandatory validation in CreateSOPModal requiring user to select at least 1 Maker and at least 1 Checker before submitting
- backend: Cleaned up hardcoded fallback user IDs in SopService.java createSop